feat: migrated to ts

--- a/src/index.html
+++ b/src/index.html
@@ -8,13 +8,15 @@
     </head>
     <body>
         <header>
-            <h1>News Portal</h1>
+            <h1 class="page-name">News Portal</h1>
+            <p class="github-link">Github: <a href="//github.com/jahanbaev">@jahanbaev</a></p>
         </header>
         <main>
             <div class="sources buttons"></div>
             <div class="news"></div>
         </main>
         <footer>
+            <img class="logo" src="https://app.rs.school/static/images/logo-rsschool3.png" alt="">
             <p class="copyright">
                 Copyright <a href="https://newsapi.org">NewsAPI</a>
             </p>
