refactor: changed styles

--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,10 @@
     </head>
     <body>
         <header>
-            <h1 class="page-name">News Portal</h1>
-            <p class="github-link">Github: <a href="//github.com/jahanbaev">@jahanbaev</a></p>
+            <section class="section">
+                <h1 class="page-name">News Portal</h1>
+                <p class="github-link">Github: <a href="//github.com/jahanbaev">@jahanbaev</a></p>
+            </section>
         </header>
         <main>
             <div class="sources buttons"></div>
